--- a/HollidayPlanner/pom.xml
+++ b/HollidayPlanner/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>converter-gson</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor.kotlin</groupId>
+			<artifactId>reactor-kotlin-extensions</artifactId>
+			<version>1.0.0.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
