- save holiday interval in the database

--- a/HollidayPlanner/src/main/resources/application.properties
+++ b/HollidayPlanner/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 
-gffdgfdgd
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net:3306/heroku_6dbfe0b017f8ea6
+spring.datasource.username=bfbf1c207d96be
+spring.datasource.password=fad7e829
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
